Avoid horizontal scrollbar whenever vertical would appear.
Also avoids vertical for current content on some 1920x1080 displays.

--- a/public/style/home.css
+++ b/public/style/home.css
@@ -3,9 +3,8 @@
 }
 
 body {
-    padding: 4rem 2rem;
-    width: 100vw;
-    min-height: 100vh;
+    padding: 3rem 2rem;
+    min-height: 100%;
     display: grid;
     align-content: center;
     justify-content: center;
